[package]
name = "ixv"
version = "0.0.1"
edition = "2021"
description = "A CLI application for verifying intel hex file"
authors = ["Karthik D K <karthikdk1998@gmail.com>"]
categories = ["command-line-utilities"]
keywords = ["intel", "hex"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Karthik-d-k/ixv"

[package.metadata.wix]
upgrade-guid = "8F380543-5C88-4A2F-AA13-3B4E9645E7DE"
path-guid = "22AD514F-9AB4-4A6C-9705-E016098FCC56"
license = false
eula = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
anyhow = "1.*"
clap = { version = "4.*", features = ["derive"] }
indicatif = "0.*"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
